--- a/indexStickyNick.html
+++ b/indexStickyNick.html
@@ -46,11 +46,7 @@
                 <div class="container clearfix">
                     <h1 id="name">
                         Cheryl Crane
-                        
                     </h1>
-                    <h2 id="sociologist">
-                        Sociologist
-                    </h2>   
                     <nav>
                         <a href="">Bio</a>
                         <a href="">CV</a>
@@ -60,16 +56,17 @@
             </header><!-- /header -->
 
             <div id="main">
-                <div id="content">
                     <section>
                         <!-- Add a new pic of cheryl -->
-                        <img src="img/Cheryl.JPG" alt="Photograph of Cheryl Crane" class="profile-photo"> 
+                        <img src="CherylWebsite.jpg" alt="Photograph of Cheryl Crane" class="profile-photo"> 
                     </section>
+                    <div id="content">
+                    
                     <section>
 
                         <div class="container">
                             <h1>Research</h1>
-                            <p>Cheryl Crane is a third year doctoral student in the Department of Sociology. She researches 
+                            <p>Cheryl Crane is a third year doctoral student in the Department of Sociology at the University of Louisville. She researches 
                             mothering, birth, and family; resistance, inequality 
                             and intersectionality. She is currently collecting in
                             depth interviews with mothers for her dissertation to 
