--- a/indexStickyNick.html
+++ b/indexStickyNick.html
@@ -56,15 +56,13 @@
             </header><!-- /header -->
 
             <div id="main">
-                    <section>
-                        <!-- Add a new pic of cheryl -->
-                        <img src="CherylWebsite.jpg" alt="Photograph of Cheryl Crane" class="profile-photo"> 
-                    </section>
+                 
                     <div id="content">
                     
                     <section>
 
                         <div class="container">
+                            <img src="CherylWebsite.jpg" alt="Photograph of Cheryl Crane" class="profile-photo"> 
                             <h1>Research</h1>
                             <p>Cheryl Crane is a third year doctoral student in the Department of Sociology at the University of Louisville. She researches 
                             mothering, birth, and family; resistance, inequality 
@@ -77,6 +75,7 @@
 
                     <section>
                         <div class="container">
+                            <img src="PeaceSquare.jpg" alt="Japanese Peace Charachter " class="profile-photo">                            
                             <h1>Teaching</h1>
                             <p>Cheryl is a Graduate Teaching Assistant for the Department 
                             of Sociology. Currently, she is teaching Diversity and Inequality. In addi-
@@ -87,6 +86,7 @@
                     </section>
                     <section>
                         <div class="container">
+                            <img src="flowerEd (2).jpg" alt="flower" class="profile-photo">                            
                             <h1>Education</h1>
                             <p>A.B.D. (Applied Sociology), University of Louisville Expected May 2016</p>
                             <p>M.A. (Human Geography), University of Washington, Seattle</p>
